# optimus-manager-qt

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  crowdin.yml  optimus-manager-qt.pro  optimus-manager-qt_ru.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: main.yml  release.yml
cmake/: ExternalLibraries.cmake
data/: io.optimus_manager.OptimusManagerQt.desktop  resources.qrc
data/icons/: flags.qrc  icon-theme.qrc  index.theme  masalla.qrc  papirus.qrc
data/icons/flags/: flags.qrc
data/translations/: optimus-manager-qt.ts  optimus-manager-qt_de_DE.ts  optimus-manager-qt_es.ts  optimus-manager-qt_es_ES.ts  optimus-manager-qt_fi_FI.ts  optimus-manager-qt_hu.ts  optimus-manager-qt_hu_HU.ts  optimus-manager-qt_ja.ts  optimus-manager-qt_ja_JP.ts  optimus-manager-qt_nl_NL.ts  optimus-manager-qt_pt.ts  optimus-manager-qt_pt_BR.ts  optimus-manager-qt_ro_RO.ts  optimus-manager-qt_ru.ts  optimus-manager-qt_ru_RU.ts  optimus-manager-qt_tr.ts  optimus-manager-qt_tr_TR.ts  optimus-manager-qt_uk_UA.ts  optimus-manager-qt_zh_CN.ts  optimus-manager.ts  optimus-manager_de.ts  optimus-manager_es.ts  optimus-manager_fi.ts  optimus-manager_hu.ts  optimus-manager_pt_BR.ts  optimus-manager_ru.ts  optimus-manager_tr.ts  optimus-manager_zh_CN.ts
src/: appsettings.cpp  appsettings.h  cmake.h.in  daemonclient.cpp  daemonclient.h  main.cpp  optimusmanager.cpp  optimusmanager.h  optimussettings.cpp  optimussettings.h  session.h  settingsdialog.cpp  settingsdialog.cpp.autosave  settingsdialog.h  settingsdialog.ui  x11deleters.cpp  x11deleters.h  xdgdesktopportal.cpp  xdgdesktopportal.h
src/settings/: appsettings.cpp  appsettings.h  optimussettings.cpp  optimussettings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/settings/autostartmanager/: abstractautostartmanager.cpp  abstractautostartmanager.h  portalautostartmanager.cpp  portalautostartmanager.h  unixautostartmanager.cpp  unixautostartmanager.h
